Add localization for ERD editor

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1251,6 +1251,40 @@ ErdPopupMenu.Relationship=Relationship
 ErdPopupMenu.View=View
 ErdPopupMenu.ZoomIn=Zoom In
 ErdPopupMenu.ZoomOut=Zoom Out
+ErdPopupMenu.needMoreTablesError=You need at least 2 tables to create a relationship
+ErdViewerPanel.title=Entity Relationship Diagram
+ErdViewerPanel.setSavedErd=Do you want to save your changes?
+ErdViewerPanel.errorFileSaving=An error occurred saving to file:\n
+ErdFontStyleDialog.title=Font Style
+ErdFontStyleDialog.Plain=Plain
+ErdFontStyleDialog.Italic=Italic
+ErdFontStyleDialog.Bold=Bold
+ErdFontStyleDialog.Bold-Italic=Bold/Italic
+ErdFontStyleDialog.TableNameStyleLabel=Table Name Style:
+ErdFontStyleDialog.ColumnNameStyleLabel=Column Name Style:
+ErdFontStyleDialog.FontNameLabel=Font Name:
+ErdFontStyleDialog.FontSizeLabel=Font Size:
+ErdFontStyleDialog.ExampleTextNormal=SAMPLE NORMAL TEXT
+ErdFontStyleDialog.ExampleTextItalic=SAMPLE ITALIC TEXT
+ErdFontStyleDialog.ExampleTextBold=SAMPLE BOLD TEXT
+ErdFontStyleDialog.ExampleTextBoldItalic=SAMPLE BOLD AND ITALIC TEXT
+ErdLineStyleDialog.title=Line Style
+ErdLineStyleDialog.LineStyleLabel=Line Style:
+ErdLineStyleDialog.LineWeightLabel=Line Weight:
+ErdLineStyleDialog.ArrowStyleLabel=Arrow Style:
+ErdLineStyleDialog.LineColourLabel=Line Colour:
+ErdTitlePanelDialog.title=ERD Title
+ErdTitlePanelDialog.titleLabel=Title:
+ErdTitlePanelDialog.dateLabel=Date:
+ErdTitlePanelDialog.DescriptionLabel=Description:
+ErdTitlePanelDialog.DatabaseLabel=Database:
+ErdTitlePanelDialog.RevisionLabel=Revision:
+ErdTitlePanelDialog.AuthorLabel=Author:
+ErdTitlePanelDialog.FileNameLabel=File Name:
+ErdNewTableDialog.title=New Table
+ErdNewTableDialog.editableTitle=Table: 
+ErdNewTableDialog.TableNameEmptyError=Table name can not be empty
+ErdNewTableDialog.TableExistsError=This table name already exists
 ErdSelectionPanel.availableTables=Available Tables:
 ErdSelectionPanel.selectedTables=Selected Tables:
 ErdToolBarPalette.canvasBg=Canvas background colour
@@ -1265,6 +1299,9 @@ ErdToolBarPalette.lineStyle=Line style
 ErdToolBarPalette.relation=Create a new table relationship
 ErdToolBarPalette.zoomIn=Zoom in
 ErdToolBarPalette.zoomOut=Zoom out
+ErdToolBarPalette.NoTablesError=No tables in ERD
+ErdToolBarPalette.NoSchemaChangesRecordedError=No schema changes have been recorded
+ErdToolBarPalette.SelectOnlyTwoTablesError=Please select only 2 related tables
 ExceptionErrorDialog.HideStackTrace=Hide Stack Trace
 ExceptionErrorDialog.NextException=Next Exception
 ExceptionErrorDialog.PreviousException=Previous Exception
@@ -1386,6 +1423,7 @@ GUIUtilities.notAuthorized=not authorized
 GUIUtilities.want-exit=Do you want exit from this account?
 GenerateErdPanel.Generate=Generate
 GenerateErdPanel.title=Generate ERD
+GenerateErdPanel.SelectMoreTablesError=You must select at least one table.
 GeneratorTestDataPanel.AfterCommit=Commit after
 GeneratorTestDataPanel.Autoincrement=Autoincrement
 GeneratorTestDataPanel.BatchCount=Batch Size
