--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1251,6 +1251,40 @@ ErdPopupMenu.Relationship=Связь
 ErdPopupMenu.View=Вид
 ErdPopupMenu.ZoomIn=Увеличить
 ErdPopupMenu.ZoomOut=Уменьшить
+ErdPopupMenu.needMoreTablesError=Для создания связи необходимо как минимум 2 таблицы.
+ErdViewerPanel.title=ER-диаграмма
+ErdViewerPanel.setSavedErd=Хотите сохранить изменения?
+ErdViewerPanel.errorFileSaving=Произошла ошибка при сохранении файла:\n
+ErdFontStyleDialog.title=Стиль шрифта
+ErdFontStyleDialog.Plain=Простой
+ErdFontStyleDialog.Italic=Курсив
+ErdFontStyleDialog.Bold=Жирный
+ErdFontStyleDialog.Bold-Italic=Жирный/Курсив
+ErdFontStyleDialog.TableNameStyleLabel=Стиль имени таблицы:
+ErdFontStyleDialog.ColumnNameStyleLabel=Стиль имени столбца:
+ErdFontStyleDialog.FontNameLabel=Имя шрифта:
+ErdFontStyleDialog.FontSizeLabel=Размер шрифта:
+ErdFontStyleDialog.ExampleTextNormal=ПРИМЕР ТЕКСТА С ПРОСТЫМ НАЧЕРТАНИЕМ
+ErdFontStyleDialog.ExampleTextItalic=ПРИМЕР ТЕКСТА С КУРСИВНЫМ НАЧЕРТАНИЕМ
+ErdFontStyleDialog.ExampleTextBold=ПРИМЕР ТЕКСТА С ЖИРНЫМ НАЧЕРТАНИЕМ
+ErdFontStyleDialog.ExampleTextBoldItalic=ПРИМЕР ТЕКСТА С ЖИРНЫМ/КУРСИВНЫМ НАЧЕРТАНИЕМ
+ErdLineStyleDialog.title=Стиль линий
+ErdLineStyleDialog.LineStyleLabel=Стиль линий:
+ErdLineStyleDialog.LineWeightLabel=Ширина линий:
+ErdLineStyleDialog.ArrowStyleLabel=Стиль стелок:
+ErdLineStyleDialog.LineColourLabel=Цвет линий:
+ErdTitlePanelDialog.title=Заголовок ER-диаграммы
+ErdTitlePanelDialog.titleLabel=Заголовок:
+ErdTitlePanelDialog.dateLabel=Дата:
+ErdTitlePanelDialog.DescriptionLabel=Описание:
+ErdTitlePanelDialog.DatabaseLabel=База данных:
+ErdTitlePanelDialog.RevisionLabel=Редакция:
+ErdTitlePanelDialog.AuthorLabel=Автор:
+ErdTitlePanelDialog.FileNameLabel=Имя файла:
+ErdNewTableDialog.title=Новая таблица
+ErdNewTableDialog.editableTitle=Таблица: 
+ErdNewTableDialog.TableNameEmptyError=Имя таблицы не может быть пустым
+ErdNewTableDialog.TableExistsError=Эта таблица уже существует
 ErdSelectionPanel.availableTables=Доступные таблицы:
 ErdSelectionPanel.selectedTables=Выбранные таблицы:
 ErdToolBarPalette.canvasBg=Цвет фона холста
@@ -1265,6 +1299,9 @@ ErdToolBarPalette.lineStyle=Стиль линии
 ErdToolBarPalette.relation=Создать новую связь таблицы
 ErdToolBarPalette.zoomIn=Увеличить
 ErdToolBarPalette.zoomOut=Уменьшить
+ErdToolBarPalette.NoTablesError=Нет таблиц в ER-диаграмме
+ErdToolBarPalette.NoSchemaChangesRecordedError=Никаких изменений схемы не зафиксировано.
+ErdToolBarPalette.SelectOnlyTwoTablesError=Пожалуйста, выберите только 2 таблицы
 ExceptionErrorDialog.HideStackTrace=Скрыть трассировку стека
 ExceptionErrorDialog.NextException=Следующее исключение
 ExceptionErrorDialog.PreviousException=Предыдущее исключение
@@ -1386,6 +1423,7 @@ GUIUtilities.notAuthorized=Вы не авторизованы
 GUIUtilities.want-exit=Вы хотите выйти из аккаунта?
 GenerateErdPanel.Generate=Построить
 GenerateErdPanel.title=Построить диаграмму БД
+GenerateErdPanel.SelectMoreTablesError=Вы должны выбрать хотя бы одну таблицу.
 GeneratorTestDataPanel.AfterCommit=Фиксация после
 GeneratorTestDataPanel.Autoincrement=Автоинкремент
 GeneratorTestDataPanel.BatchCount=Кол-во записей в пакете
