Add localization for SQLTextArea caret position label

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -9,6 +9,7 @@ common.add.button=Add
 common.advanced=Advanced
 common.apply.button=Apply
 common.cancel.button=Cancel
+common.care-position.label=Caret Position %s:%s
 common.clear.button=Clear
 common.close.button=Close
 common.collate=Collation
