--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -9,6 +9,7 @@ common.add.button=Добавить
 common.advanced=Расширенные свойства
 common.apply.button=Применить
 common.cancel.button=Отмена
+common.care-position.label=Позиция каретки %s:%s
 common.clear.button=Очистить
 common.close.button=Закрыть
 common.collate=Сортировка
