make the menu name and tab name the same for grant manager

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1480,7 +1480,7 @@ GrantManagerPanel.Field=Поле
 GrantManagerPanel.Functions=Функции
 GrantManagerPanel.Generators=Генераторы
 GrantManagerPanel.GlobalTemporaries=Глобальные временные таблицы
-GrantManagerPanel.GrantManager=Менеджер прав
+GrantManagerPanel.GrantManager=Менеджер привилегий
 GrantManagerPanel.GrantedOnly=Только с правами
 GrantManagerPanel.GrantsOn=Привилегии
 GrantManagerPanel.InvertFilter=Инвертировать фильтр
