Add the properties panel for Tables (RS-87539)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -739,6 +739,7 @@ BrowserTableEditingPanel.SaveCommentButton=Save
 BrowserTableEditingPanel.adapter=Adapter
 BrowserTableEditingPanel.alter-table=Alter Table
 BrowserTableEditingPanel.comment-field-label=Comment
+BrowserTableEditingPanel.preferences-panel-label=Properties
 BrowserTableEditingPanel.constraints-table=Constraints for table: 
 BrowserTableEditingPanel.create-table=Create Table
 BrowserTableEditingPanel.data-table=Table Data: 
@@ -756,6 +757,13 @@ BrowserTableEditingPanel.table-indexes=Table Indices
 BrowserTableEditingPanel.table-keys=Table Keys
 BrowserTableEditingPanel.table-name=Table Name:
 BrowserTableEditingPanel.table-triggers=Table Triggers
+BrowserTableEditingPanel.PreferencesPanel.adapterCheckBox=CSV Adapter in use
+BrowserTableEditingPanel.PreferencesPanel.browseExternalFileButton=Browse
+BrowserTableEditingPanel.PreferencesPanel.sqlSecurityComboBox=SQL SECURITY
+BrowserTableEditingPanel.PreferencesPanel.tablespaceComboBox=Tablespace
+BrowserTableEditingPanel.PreferencesPanel.externalFileTextField=External file
+BrowserTableEditingPanel.PreferencesPanel.OpenFileDialogText=Select Tablespace File
+BrowserTableEditingPanel.PreferencesPanel.AlterTable=Altering Table
 BrowserTreeCellRenderer.Host=Host:
 BrowserTreeCellRenderer.DataSource=Data Source:
 BrowserTreeCellRenderer.User=User:
