--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -739,6 +739,7 @@ BrowserTableEditingPanel.SaveCommentButton=Сохранить
 BrowserTableEditingPanel.adapter=Адаптер
 BrowserTableEditingPanel.alter-table=Изменить таблицу
 BrowserTableEditingPanel.comment-field-label=Комментарий
+BrowserTableEditingPanel.preferences-panel-label=Свойства
 BrowserTableEditingPanel.constraints-table=Ограничения таблицы: 
 BrowserTableEditingPanel.create-table=Создать таблицу
 BrowserTableEditingPanel.data-table=Данные таблицы: 
@@ -756,6 +757,13 @@ BrowserTableEditingPanel.table-indexes=Табличные индексы
 BrowserTableEditingPanel.table-keys=Ключи таблицы
 BrowserTableEditingPanel.table-name=Имя таблицы:
 BrowserTableEditingPanel.table-triggers=Табличные триггеры
+BrowserTableEditingPanel.PreferencesPanel.adapterCheckBox=Используется CSV адаптер
+BrowserTableEditingPanel.PreferencesPanel.browseExternalFileButton=Выбрать
+BrowserTableEditingPanel.PreferencesPanel.sqlSecurityComboBox=SQL SECURITY
+BrowserTableEditingPanel.PreferencesPanel.tablespaceComboBox=Табличное пространство
+BrowserTableEditingPanel.PreferencesPanel.externalFileTextField=Внешний файл
+BrowserTableEditingPanel.PreferencesPanel.OpenFileDialogText=Выберите файл табличного пространства
+BrowserTableEditingPanel.PreferencesPanel.AlterTable=Изменение таблицы
 BrowserTreeCellRenderer.Host=Хост:
 BrowserTreeCellRenderer.DataSource=Источник данных:
 BrowserTreeCellRenderer.User=Пользователь:
