Correct description of datetime templates (RS-140874)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -3140,8 +3140,8 @@ ER-диаграмма визуализирует табличные связи, 
 	mm & минуты с лидирующим нулем & 32 \\\hline
 	s & секунды без лидирующих нулей & 11 \\\hline
 	ss & секунды с лидирующим нулем & 11 \\\hline
-	S & миллисекунды с округлением до десятых & 1 \\\hline
-	SS & миллисекунды с округлением до сотых & 11 \\\hline
+	S & миллисекунды (только первая цифра) & 1 \\\hline
+	SS & миллисекунды (только первые две цифры)	 & 11 \\\hline
 	z & часовой пояс & EET \\\hline
 	Z & часовой пояс в формате RFC 822 & +0200 \\\hline
 	' & символ экранирования для текста & 'Date=' \\\hline
