Add ability to specify custom JVM path (RS-107303)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -400,6 +400,8 @@ preferences.DecorateFrame=Decorate frame
 preferences.DefaultCellBackground=Default cell background
 preferences.DefaultEditorAuto-commit=Default editor auto-commit
 preferences.DefaultFileEncoding=Default file encoding
+preferences.JavaPath=Path to the Java executable file
+preferences.LogPath=Path to the Log file
 preferences.DefaultMaximumRowsReturned=Default maximum rows returned
 preferences.DeletedValueCellBackground=Deleted value cell background
 preferences.DesktopBackground=Desktop background
