--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -400,6 +400,8 @@ preferences.DecorateFrame=Стилизовать окна
 preferences.DefaultCellBackground=Фон ячейки по умолчанию
 preferences.DefaultEditorAuto-commit=Авто-коммит для редактора по умолчанию
 preferences.DefaultFileEncoding=Кодировка файлов по умолчанию
+preferences.JavaPath=Путь к исполняемому файлу Java
+preferences.LogPath=Путь сохранения файла лога
 preferences.DefaultMaximumRowsReturned=Максимум возвращаемых строк по умолчанию
 preferences.DeletedValueCellBackground=Фон ячейки с удаляемым значением
 preferences.DesktopBackground=Фон рабочего стола
