Document ability to specify relative path to java (RS-147680)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -2869,6 +2869,8 @@ ER-диаграмма визуализирует табличные связи, 
 	&  \\\hline
 	Кодировка файлов по умолчанию
 	&   \\\hline
+	Путь к исполняемому файлу Java
+	& Путь к исполняемому файлу Java. Можно указывать как абсолютный путь, так и относительный. \\\hline
 	\rowcolor[gray]{.9}\multicolumn{2}{|m{15.25cm}|}{\bfseries Настройка прокси}\\\hline 
 	Использовать прокси 
 	&  Использовать прокси-сервер для подключения к интернету \\\hline
@@ -2993,7 +2995,7 @@ ER-диаграмма визуализирует табличные связи, 
 	Вывод лога в файл
 	&  Сохранять записи панели вывода Редактора запросов в файл\\\hline 
 	Путь к файлу с логом
-	&  \\\hline
+	&  Определяет абсолютный или относительный путь к файлу \ttt{redexpert\_log.txt}. Для использования относительного пути в начале строки необходимо дописать \ttt{../}.\\\hline
 	Количество сохраняемых файлов с логами
 	& Количество сохраненных файлов с логами. При достижении файла с логами размера более 1МБ, он переименовывается в файл logfile.log.1 и т.д. И запись снова продолжается в файл logfile.log. Когда количество файлов будет равно числу, указанному в этом параметре, файлы будут перезаписаны. Если указано 0, то количество файлов неограниченно.\\\hline
 	Открывать новый редактор для нового открытого подключения
