RS-107302 - Fix using specific path to the log directory - Fix string that used as relative path mark

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -462,7 +462,7 @@ preferences.OpenANewEditorForNewOpenConnection=Open a new editor for new open co
 preferences.Operator=Operator
 preferences.OtherValueCellBackground=Other value cell background
 preferences.OutputConsole=Output Console
-preferences.OutputLogFilePath=Output log file path
+preferences.OutputLogFilePath=Output logs directory path
 preferences.OutputLogLevel=Output log level
 preferences.Preferences=Preferences
 preferences.PrintAllSQLToOutputPanel=Print all SQL to output panel
