Correct description of ability to specify relative path to log directory (RS-147680)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -2994,8 +2994,8 @@ ER-диаграмма визуализирует табличные связи, 
 	& \\\hline 
 	Вывод лога в файл
 	&  Сохранять записи панели вывода Редактора запросов в файл\\\hline 
-	Путь к файлу с логом
-	&  Определяет абсолютный или относительный путь к файлу \ttt{redexpert\_log.txt}. Для использования относительного пути в начале строки необходимо дописать \ttt{../}.\\\hline
+	Путь к директории с логами
+	&  Определяет абсолютный или относительный путь к директории, в которой будет создана папка \ttt{logs}, содержащая файлы логов. Для использования относительного пути в начале строки необходимо дописать \ttt{\%re\%}.\\\hline
 	Количество сохраняемых файлов с логами
 	& Количество сохраненных файлов с логами. При достижении файла с логами размера более 1МБ, он переименовывается в файл logfile.log.1 и т.д. И запись снова продолжается в файл logfile.log. Когда количество файлов будет равно числу, указанному в этом параметре, файлы будут перезаписаны. Если указано 0, то количество файлов неограниченно.\\\hline
 	Открывать новый редактор для нового открытого подключения
