Add error message for ShowHideResultSetColumns action when no result set is selected (RS-146190)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -2027,6 +2027,7 @@ ScratchPadPanel.paste=Paste to Query Editor
 ScratchPadPanel.new=New Scratch Pad
 ScratchPadPanel.clear=Clear
 ScratchPadPanel.JobName=Red Expert - scratch pad
+ShowHideResultSetColumnsCommand.errorMessage=No Result Set selected
 ShowPasswordDialog.Password=Password
 ShowPasswordDialog.Copy=Copy to Clipboard
 ShowPasswordDialog.CopyToolTip=Copies the selected query to the system clipboard
