--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -2027,6 +2027,7 @@ ScratchPadPanel.paste=Вставить в редактор запросов
 ScratchPadPanel.new=Новый черновик
 ScratchPadPanel.clear=Очистить
 ScratchPadPanel.JobName=Черновик Red Expert
+ShowHideResultSetColumnsCommand.errorMessage=Не выбран набор результатов
 ShowPasswordDialog.Password=Пароль
 ShowPasswordDialog.Copy=Скопировать
 ShowPasswordDialog.CopyToolTip=Копирует выбранный запрос в системный буфер обмена
