fix precision column for decimal and numeric

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -74,6 +74,7 @@ common.ok.button=OK
 common.parameter=Parameter
 common.parameters=Parameters
 common.paste=Paste
+common.precision=Precision
 common.print.button=Print
 common.privileges=Privileges
 common.properties=Properties
@@ -86,6 +87,7 @@ common.scale=Scale
 common.select.button=Select
 common.send.button=Send
 common.size=Size
+common.sizePrecision=Size or precision
 common.subtype=Subtype
 common.stop=Stop
 common.search=Search:
@@ -2085,11 +2087,12 @@ TableDefinitionPanel.Encoding=Encoding
 TableDefinitionPanel.NULL=NULL
 TableDefinitionPanel.Name=Name
 TableDefinitionPanel.PK=PK
+TableDefinitionPanel.Precision=Precision
 TableDefinitionPanel.Required=NOT NULL
 TableDefinitionPanel.Scale=Scale
 TableDefinitionPanel.Scroll=Scroll
 TableDefinitionPanel.SelectOperator=Select operator
-TableDefinitionPanel.Size=Size
+TableDefinitionPanel.SizePrecision=Size or precision
 TableDefinitionPanel.Subtype=Subtype
 TableDefinitionPanel.Table=Table
 TableDefinitionPanel.Tablespace=Tablespace
