--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -74,6 +74,7 @@ common.ok.button=OK
 common.parameter=Параметр
 common.parameters=Параметры
 common.paste=Вставить
+common.precision=Точность
 common.print.button=Печать
 common.privileges=Привилегии
 common.properties=Свойства
@@ -82,10 +83,11 @@ common.references=Ссылки
 common.required=Not Null
 common.save-as.button=Сохранить как
 common.save.button=Сохранить
-common.scale=Точность
+common.scale=Масштаб
 common.select.button=Выбрать
 common.send.button=Отправить
 common.size=Размер
+common.sizePrecision=Размер или точность
 common.subtype=Подтип
 common.stop=Остановить
 common.search=Поиск:
@@ -2085,11 +2087,12 @@ TableDefinitionPanel.Encoding=Кодировка
 TableDefinitionPanel.NULL=NULL
 TableDefinitionPanel.Name=Название
 TableDefinitionPanel.PK=PK
+TableDefinitionPanel.Precision=Precision
 TableDefinitionPanel.Required=NOT NULL
-TableDefinitionPanel.Scale=Точность
+TableDefinitionPanel.Scale=Масштаб
 TableDefinitionPanel.Scroll=Скролл
 TableDefinitionPanel.SelectOperator=Выражение выборки
-TableDefinitionPanel.Size=Размер
+TableDefinitionPanel.SizePrecision=Размер или точность
 TableDefinitionPanel.Subtype=Подтип
 TableDefinitionPanel.Table=Таблица
 TableDefinitionPanel.Tablespace=Табличное пространство
