See RS-144863 - Add a restart confirmation dialog when applying the settings. - Restart method from UpdateLoader replaced to the call of the ExecuteQuery::restart method.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -543,7 +543,7 @@ preferences.UseFormForAddingDeletingRecords=Use form for adding/deleting records
 preferences.UseOtherColorForNullWhenAddingDeletingRecords=Use other color for null when adding/deleting records
 preferences.UseProxyServer=Use proxy server for internet connections
 preferences.Visibility=Visibility
-preferences.restart-message=The settings will take effect after the application is restarted.
+preferences.restart-message=The settings will take effect after the application is restarted.\nRestart application now?
 # -----------------------------------------------------
 # Classes
 # -----------------------------------------------------
