--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -543,7 +543,7 @@ preferences.UseFormForAddingDeletingRecords=Использовать форму 
 preferences.UseOtherColorForNullWhenAddingDeletingRecords=Использовать другой цвет для значений с null при добавлении/удалении записей
 preferences.UseProxyServer=Использовать прокси
 preferences.Visibility=Видимость
-preferences.restart-message=Настройки вступят в силу после перезапуска приложения
+preferences.restart-message=Настройки вступят в силу после перезапуска приложения.\nПерезагрузить приложение прямо сейчас?
 # -----------------------------------------------------
 # Classes
 # -----------------------------------------------------
