Improve edit database view panel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1164,6 +1164,7 @@ CreateTriggerPanel.database-trigger=Database trigger
 CreateTriggerPanel.event=Event
 CreateTriggerPanel.position=Position
 CreateTriggerPanel.table-trigger=Table trigger
+CreateViewPanel.selectTabLabel=Select Statement
 CreateUDFPanel.Description=Comment
 CreateUDFPanel.EntryPoint=Entry Point
 CreateUDFPanel.InputParameters=Input Parameters
