--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1164,6 +1164,7 @@ CreateTriggerPanel.database-trigger=Триггер базы данных
 CreateTriggerPanel.event=Событие
 CreateTriggerPanel.position=Позиция
 CreateTriggerPanel.table-trigger=Табличный триггер
+CreateViewPanel.selectTabLabel=Выражение выборки данных
 CreateUDFPanel.Description=Комментарий
 CreateUDFPanel.EntryPoint=Точка входа
 CreateUDFPanel.InputParameters=Входные параметры
