Fix editing views (RS-149246)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1165,6 +1165,7 @@ CreateTriggerPanel.event=Event
 CreateTriggerPanel.position=Position
 CreateTriggerPanel.table-trigger=Table trigger
 CreateViewPanel.selectTabLabel=Select Statement
+CreateViewPanel.confirmTabChange=When you exit this tab, all changes you have made will be lost.\nAre you sure you want to switch tab?
 CreateUDFPanel.Description=Comment
 CreateUDFPanel.EntryPoint=Entry Point
 CreateUDFPanel.InputParameters=Input Parameters
