--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1165,6 +1165,7 @@ CreateTriggerPanel.event=Событие
 CreateTriggerPanel.position=Позиция
 CreateTriggerPanel.table-trigger=Табличный триггер
 CreateViewPanel.selectTabLabel=Выражение выборки данных
+CreateViewPanel.confirmTabChange=При выходе с этой вкладки все внесенные изменения будут потеряны.\nВы действительно хотите перейти на другую вкладку?
 CreateUDFPanel.Description=Комментарий
 CreateUDFPanel.EntryPoint=Точка входа
 CreateUDFPanel.InputParameters=Входные параметры
