Make the application prompt for a reboot when changing only those settings that require it (RS-144863)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -544,6 +544,7 @@ preferences.UseOtherColorForNullWhenAddingDeletingRecords=Use other color for nu
 preferences.UseProxyServer=Use proxy server for internet connections
 preferences.Visibility=Visibility
 preferences.restart-message=The settings will take effect after the application is restarted.\nRestart application now?
+preferences.setting-applied=New settings applied successfully
 # -----------------------------------------------------
 # Classes
 # -----------------------------------------------------
