--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -544,6 +544,7 @@ preferences.UseOtherColorForNullWhenAddingDeletingRecords=Использоват
 preferences.UseProxyServer=Использовать прокси
 preferences.Visibility=Видимость
 preferences.restart-message=Настройки вступят в силу после перезапуска приложения.\nПерезагрузить приложение прямо сейчас?
+preferences.setting-applied=Новые настройки успешно применены
 # -----------------------------------------------------
 # Classes
 # -----------------------------------------------------
