--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -2049,6 +2049,7 @@ SystemLogsViewer.reload=Reload this log file
 SystemLogsViewer.reset=Reset this log file
 SystemLogsViewer.outOfMemory=Out of Memory.\nThe file is too large to open for viewing.
 SystemLogsViewer.resetConfirmed=Are you sure you want to reset the selected log file?
+SystemLogsViewer.LogFileNotFound=Selected log file not found
 SystemOutputPanel.title=Output Console
 SystemOutputPanelPopUpMenu.reset=Reset
 SystemOutputPanelPopUpMenu.reset.tooltip=Clear the system output pane and reset the output log file
