RS-149272 - Clarify displayed settings names - Remove not worked setting usage

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -412,10 +412,10 @@ preferences.Drivers=Drivers
 preferences.EditToolBar=Edit Tool Bar
 preferences.EditTools=Edit Tools
 preferences.Editor=Editor
-preferences.EditorAlternativeBackground=Editor alternative background
+preferences.EditorAlternativeBackground=Editor alternative background in the BLOB records view panel
 preferences.EditorBackground=Editor Background
 preferences.EditorChristmasMelody=Christmas melody
-preferences.EditorForeground=Editor Foreground
+preferences.EditorForeground=Editor Foreground in the BLOB records view panel
 preferences.EditorSample=EditorSample
 preferences.FetchSize=Fetch size
 preferences.FileToolBar=File Tool Bar
@@ -529,9 +529,9 @@ preferences.SystemTools=System Tools
 preferences.TabSize=Tab size
 preferences.TableDataPanel=Table Data Panel
 preferences.Text=Text
-preferences.TextSelectionAlternativeBackground=Text selection alternative background
+preferences.TextSelectionAlternativeBackground=Text selection alternative background in the BLOB records view panel
 preferences.TextSelectionBackground=Text selection background
-preferences.TextSelectionForeground=Text selection foreground
+preferences.TextSelectionForeground=Text selection foreground in the BLOB records view panel
 preferences.TimeZones=Time Zones
 preferences.ToolBar=Tool Bar
 preferences.ToolsPanel=Tools panel
