--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -412,10 +412,10 @@ preferences.Drivers=Драйверы
 preferences.EditToolBar=Панель инструментов правки
 preferences.EditTools=Инструменты правки
 preferences.Editor=Редактор
-preferences.EditorAlternativeBackground=Альтернативный фон редактора
+preferences.EditorAlternativeBackground=Альтернативный фон редактора в окне просмотра BLOB-записей
 preferences.EditorBackground=Фон редактора
 preferences.EditorChristmasMelody=Рождественская мелодия
-preferences.EditorForeground=Цвет шрифта редактора
+preferences.EditorForeground=Цвет шрифта редактора в окне просмотра BLOB-записей
 preferences.EditorSample=Образцы
 preferences.FetchSize=Количество подгружаемых записей за раз
 preferences.FileToolBar=Панель инструментов файла
@@ -529,9 +529,9 @@ preferences.SystemTools=Системные настройки
 preferences.TabSize=Количество пробелов в табуляции
 preferences.TableDataPanel=Панель данных таблицы
 preferences.Text=Текст
-preferences.TextSelectionAlternativeBackground=Альтернативный цвет выделения
+preferences.TextSelectionAlternativeBackground=Альтернативный цвет выделения в окне просмотра BLOB-записей
 preferences.TextSelectionBackground=Цвет выделения
-preferences.TextSelectionForeground=Цвет выделенного текста
+preferences.TextSelectionForeground=Цвет выделенного текста в окне просмотра BLOB-записей
 preferences.TimeZones=Часовые пояса
 preferences.ToolBar=Панель инструментов
 preferences.ToolsPanel=Панель инструментов
