Fix editor.logging.enabled setting applying and using (RS-144863)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -442,7 +442,7 @@ preferences.LoadUnstableVersions=Load unstable versions
 preferences.Locale=Locale
 preferences.LogErrToConsole=Log System.err to console
 preferences.LogOutToConsole=Log System.out to console
-preferences.LogOutputToFile=Log output to file
+preferences.LogOutputToFile=Logging application operation
 preferences.LookAndFeel=Look and feel
 preferences.LookFeelPlugins=Look & Feel Plugins
 preferences.MaxCLOBCharacterLengthShown=Max CLOB character length shown
