RS-144863 - Rename "Output Console" properties panel to "Logging" - Replace logging settings to the "Logging" panel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -461,7 +461,7 @@ preferences.ObjectsDB=Objects DB
 preferences.OpenANewEditorForNewOpenConnection=Open a new editor for new open connection
 preferences.Operator=Operator
 preferences.OtherValueCellBackground=Other value cell background
-preferences.OutputConsole=Output Console
+preferences.Logging=Logging
 preferences.OutputLogFilePath=Output logs directory path
 preferences.OutputLogLevel=Output log level
 preferences.Preferences=Preferences
