--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -461,7 +461,7 @@ preferences.ObjectsDB=Объекты БД
 preferences.OpenANewEditorForNewOpenConnection=Открывать новый редактор для нового открытого подключения
 preferences.Operator=Оператор
 preferences.OtherValueCellBackground=Фон ячейки с прочим значением
-preferences.OutputConsole=Консоль
+preferences.Logging=Логирование
 preferences.OutputLogFilePath=Путь к папке с логами
 preferences.OutputLogLevel=Уровень лога событий
 preferences.Preferences=Настройки
