add tooltips for privileges buttons

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1516,6 +1516,15 @@ GrantManagerPanel.message.notConnected=No connections available!
 GrantManagerPanel.message.terminate-grant=Are you sure that you want to terminate process?
 GrantManagerPanel.objectUsers=Object->Users
 GrantManagerPanel.userObjects=User->Objects
+GrantManagerPanel.no_grant_vertical=Revoke all privileges from selected column
+GrantManagerPanel.no_grant_gorisont=Revoke all privileges from selected row
+GrantManagerPanel.no_grant_all=Revoke all privileges
+GrantManagerPanel.grant_vertical=Grant all privileges to selected column
+GrantManagerPanel.grant_gorisont=Grant all privileges to selected row
+GrantManagerPanel.grant_all=Grant all privileges
+GrantManagerPanel.admin_option_vertical=Grant all privileges to selected column with grant option
+GrantManagerPanel.admin_option_gorisont=Grant all privileges to selected row with grant option
+GrantManagerPanel.admin_option_all=Grant all privileges with grant option
 HeapMemoryPanel.Garbage-collection-released=Garbage collection released 
 HeapMemoryPanel.GarbageCollection=Garbage collection released 
 HeapMemoryPanel.JavaVirtualMachines=Java Virtual Machine's object heap.
