CreateProcedureFunctionPanel class code clean

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1129,6 +1129,7 @@ CreateProcedureFunctionPanel.OutputParameters=Output Parameters
 CreateProcedureFunctionPanel.PROCEDURE=Procedure
 CreateProcedureFunctionPanel.Variables=Variables
 CreateProcedureFunctionPanel.parseVariables=parse variables
+CreateProcedureFunctionPanel.ErrorRetrievingDataTypes=Error retrieving the data types for the selected connection.\nThe system returned:\n
 CreateTableFunctionPanel.BrowseButtonText=Browse
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
