Fix updating procedure SQL-text when switching tabs (RS-142433)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1130,6 +1130,7 @@ CreateProcedureFunctionPanel.PROCEDURE=Procedure
 CreateProcedureFunctionPanel.Variables=Variables
 CreateProcedureFunctionPanel.parseVariables=parse variables
 CreateProcedureFunctionPanel.ErrorRetrievingDataTypes=Error retrieving the data types for the selected connection.\nThe system returned:\n
+CreateProcedureFunctionPanel.confirmTabChange=When you exit this tab, all changes you have made will be lost.\nAre you sure you want to switch tab?
 CreateTableFunctionPanel.BrowseButtonText=Browse
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
