--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1135,6 +1135,7 @@ CreateProcedureFunctionPanel.PROCEDURE=процедуры
 CreateProcedureFunctionPanel.Variables=Переменные
 CreateProcedureFunctionPanel.parseVariables=Парсить переменные
 CreateProcedureFunctionPanel.ErrorRetrievingDataTypes=Ошибка при получении типов данных для выбранного соединения.\nСистема вернула:\n
+CreateProcedureFunctionPanel.confirmTabChange=При выходе с этой вкладки все внесенные изменения будут потеряны.\nВы действительно хотите перейти на другую вкладку?
 CreateTableFunctionPanel.BrowseButtonText=Открыть Файл
 CreateTableFunctionPanel.Columns=Столбцы
 CreateTableFunctionPanel.Connection=Подключение:
