--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -165,6 +165,7 @@ action.editor-stop-command=Cancel Executing Statement
 action.execute-as-block-command=Execute as Single Statement
 action.execute-at-cursor-command=Execute at Cursor
 action.execute-command=Execute
+action.execute-in-any-connections-command=Execute in any connections
 action.execute-in-profiler-command=Execute Script In Profiler
 action.execute-object.description=View and execute stored procedures and functions
 action.execute-object=Execute Stored Objects
@@ -441,6 +442,7 @@ preferences.Locale=Locale
 preferences.LogErrToConsole=Log System.err to console
 preferences.LogOutToConsole=Log System.out to console
 preferences.LogOutputToFile=Logging application operation
+preferences.Logging=Logging
 preferences.LookAndFeel=Look and feel
 preferences.LookFeelPlugins=Look & Feel Plugins
 preferences.MaxCLOBCharacterLengthShown=Max CLOB character length shown
@@ -461,7 +463,6 @@ preferences.ObjectsDB=Objects DB
 preferences.OpenANewEditorForNewOpenConnection=Open a new editor for new open connection
 preferences.Operator=Operator
 preferences.OtherValueCellBackground=Other value cell background
-preferences.Logging=Logging
 preferences.OutputLogFilePath=Output logs directory path
 preferences.OutputLogLevel=Output log level
 preferences.Preferences=Preferences
@@ -911,9 +912,9 @@ CheckForUpdateNotifier.newVersionMessage=New version {0} is available for downlo
 CheckForUpdateNotifier.noInternetMessage=There is no internet connection. Please check for updates later.
 CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Retrieving new version release notes
+CheckForUpdateNotifier.restart.message.postpone=The application will be updated after its closing.
 CheckForUpdateNotifier.restart.message.title=Update downloaded
 CheckForUpdateNotifier.restart.message=The update has been downloaded. Do you want to restart the application right now?
-CheckForUpdateNotifier.restart.message.postpone=The application will be updated after its closing.
 CheckForUpdateNotifier.title=RedExpert Update
 CheckForUpdateNotifier.updateAvailable=Update available
 ClearRecentFilesCommand.message=An IO error occurred clearing the recent open files list
@@ -942,6 +943,7 @@ ComparerDBPanel.ComparingEnds=Comparing has been finished.\nObjects to create - 
 ComparerDBPanel.ConnectionsLabel=Connections
 ComparerDBPanel.CreateObjects=Objects To Create
 ComparerDBPanel.CreatingStubs=Creating stubs for %s
+ComparerDBPanel.DATABASE_TRIGGER=
 ComparerDBPanel.DatabaseChanges=Database Changes
 ComparerDBPanel.DropObjects=Objects To Drop
 ComparerDBPanel.ErrorOccurred=Error occurred while comparing DBs.\nThe comparison will be finished forcibly.
@@ -953,6 +955,7 @@ ComparerDBPanel.ExtractingForAlter=Extracting %s for alter
 ComparerDBPanel.ExtractingForCreate=Extracting %s for create
 ComparerDBPanel.ExtractingForDrop=Extracting %s for drop
 ComparerDBPanel.FDBCompared=\nAt least one of the connection use Firebird connection.\nTablespace & Job will not be included in the comparison.
+ComparerDBPanel.GLOBAL_TEMPORARY=
 ComparerDBPanel.GenerateAlterScript=Generating SQL script for %s to alter
 ComparerDBPanel.GenerateCreateComputedScript=Generating SQL script for computed fields to create
 ComparerDBPanel.GenerateCreateConstraintScript=Generating SQL script for constraints to create
@@ -962,9 +965,9 @@ ComparerDBPanel.GenerateDropScript=Generating SQL script for %s to drop
 ComparerDBPanel.IgnoreCK=Ignore CK
 ComparerDBPanel.IgnoreComments=Ignore Comments
 ComparerDBPanel.IgnoreComputed=Ignore Computed Fields
-ComparerDBPanel.IgnorePositions=Ignore Fields Positions
 ComparerDBPanel.IgnoreFK=Ignore FK
 ComparerDBPanel.IgnorePK=Ignore PK
+ComparerDBPanel.IgnorePositions=Ignore Fields Positions
 ComparerDBPanel.IgnoreUK=Ignore UK
 ComparerDBPanel.LoadColumnsForAllTables=Loading columns for %s
 ComparerDBPanel.LoadFullInfoForObjects=Loading full info for %s
@@ -983,6 +986,8 @@ ComparerDBPanel.ScriptSaved=Script was saved successfully.
 ComparerDBPanel.SearchingForDependencies=Searching for dependencies
 ComparerDBPanel.SelectAllButton=Select All
 ComparerDBPanel.SourceLabel=Source DB Script (new)
+ComparerDBPanel.TABLESPACE=
+ComparerDBPanel.TRIGGER=
 ComparerDBPanel.TargetLabel=Target DB Script (old)
 ComparerDBPanel.TreeView=View
 ComparerDBPanel.UnableCompareNoAttributes=Unable to compare.\nNo attributes for comparing selected.
@@ -1123,14 +1128,14 @@ CreateProcedureFunctionPanel.Cursors=Cursors
 CreateProcedureFunctionPanel.DDL=DDL
 CreateProcedureFunctionPanel.Description=Comment
 CreateProcedureFunctionPanel.Edit=Edit
+CreateProcedureFunctionPanel.ErrorRetrievingDataTypes=Error retrieving the data types for the selected connection.\nThe system returned:\n
 CreateProcedureFunctionPanel.FUNCTION=Function
 CreateProcedureFunctionPanel.InputParameters=Input Parameters
 CreateProcedureFunctionPanel.OutputParameters=Output Parameters
 CreateProcedureFunctionPanel.PROCEDURE=Procedure
 CreateProcedureFunctionPanel.Variables=Variables
-CreateProcedureFunctionPanel.parseVariables=parse variables
-CreateProcedureFunctionPanel.ErrorRetrievingDataTypes=Error retrieving the data types for the selected connection.\nThe system returned:\n
 CreateProcedureFunctionPanel.confirmTabChange=When you exit this tab, all changes you have made will be lost.\nAre you sure you want to switch tab?
+CreateProcedureFunctionPanel.parseVariables=parse variables
 CreateTableFunctionPanel.BrowseButtonText=Browse
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
@@ -1900,6 +1905,7 @@ QueryEditor.LineWrapper=Wrap lines
 QueryEditor.MaxRows.tool-tip=Enable/disable max records
 QueryEditor.MaxRows=Max Rows:
 QueryEditor.MaxRowsToolTip=Set the maximum rows returned (-1 for all)
+QueryEditor.ShowTPP=Show TPP
 QueryEditor.StopOnError.tool-tip=Enable/disable stopping when error in script
 QueryEditor.StopOnError=Stop on error
 QueryEditor.TransactionIsolationLevel=Transaction isolation level:
@@ -1966,7 +1972,7 @@ QueryEditorToolBar.editor-rs-metadata-command=Display this result set's meta dat
 QueryEditorToolBar.editor-show-hide-rs-columns-command=Select dataset columns to display
 QueryEditorToolBar.editor-stop-command=Cancel current statement execution
 QueryEditorToolBar.execute-at-cursor-command=Execute statement the cursor is on
-QueryEditorToolBar.execute-command=Execute query as a whole block
+QueryEditorToolBar.execute-command=Execute query as a single statement
 QueryEditorToolBar.execute-in-any-connections-command=Execute query in any connections
 QueryEditorToolBar.execute-in-profiler-command=Execute in the profiler
 QueryEditorToolBar.execute-script-command=Execute SQL Script
