fix localization for SelectConnectionsPanel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -2051,6 +2051,8 @@ SearchFilesDialog.message.EnterSearchText=You must enter search text
 SearchFilesDialog.message.NotSelectedPath=You must select a search path
 SearchFilesDialog.message.ThePathNotExist=The path or file entered does not exist
 SearchFilesDialog.message.searchSubdirsCheck=Search Subdirectories
+SelectConnectionsPanel.availableConnections=Available connections
+SelectConnectionsPanel.selectedConnections=Selected connections
 ShowHideResultSetColumnsCommand.errorMessage=No Result Set selected
 ShowPasswordDialog.Copy=Copy to Clipboard
 ShowPasswordDialog.CopyToolTip=Copies the selected query to the system clipboard
